[package]
name = "gpio-interrupt"
version = "0.1.0"
authors = ["celcius-plus-273 <kelvinandreshau@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
embedded-hal = "0.2"
# Remove me if you don't want logging.
log = "0.4"
cortex-m-rtic = "1.1.4"
teensy4-pins = "0.3.1"
systick-monotonic = "1.0.1"

[dependencies.teensy4-panic]
version = "0.2"
features = ["log"]

[dependencies.teensy4-bsp]
version = "0.4"
features = [
    # Use the BSP's runtime. This lets you write your
    # `main()` function.
    "rt",
    # Remove me if you don't want logging.
    "usb-logging",
]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
